--- a/src/Components/Play/Play.module.scss
+++ b/src/Components/Play/Play.module.scss
@@ -1,7 +1,49 @@
-.row {
+$box: 30px;
+.wrapper {
+  @apply bg-slate-900 h-screen;
   display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
-.row-reverse {
+
+.inner {
+  display: grid;
+  grid-template-columns: repeat(8, $box);
+  grid-gap: 2px;
+  padding: 15px;
+  justify-content: center;
+}
+.inner-1 {
+  grid-template-columns: repeat(6, $box);
+}
+.inner-2 {
+  grid-template-columns: repeat(8, $box);
+}
+.inner-3 {
+  grid-template-columns: repeat(16, $box);
+}
+
+.cell {
+  height: $box;
+  @apply bg-slate-500;
   display: flex;
-  flex-direction: row-reverse;
+  justify-content: center;
+  align-items: center;
+}
+
+.open {
+  @apply bg-slate-300;
+}
+
+.bomb {
+  background-color: red;
+}
+
+.text {
+  @apply text-slate-200 font-semibold mb-4;
+}
+
+.button {
+  @apply bg-slate-500 border-2 rounded-lg p-2 border-slate-200 text-slate-200 font-semibold;
 }
